lavender and mint styling changes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #navbar {
     /* red-orange color to contrast with the map */
-    background-color: #FF4433;
+    background-color: #DABFFF;
     /* nice blue #7AC5CD; */
 }
 
@@ -14,10 +14,11 @@
     height: 500px;
 }
 
-#fluffFinderHeader:hover{
-    background-color: #00CEF1;
-}
-
 .space {
     margin: 5px;
+}
+
+.hoverable:hover{
+    border-radius: 16px;
+    background-color: #99EDC3
 }
