--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@
   #offCanvasHeader{
     background-color:#DEDEDE;
   }
+
+  .dot {
+    height: 30px;
+    width: 30px;
+    border: 2px solid black;
+    background-color: #FFFFFF;
+    box-shadow: 1px 1px 14px 9px rgba(0,0,0,0.65);
+    border-radius: 50%;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
