--- a/style.css
+++ b/style.css
@@ -88,14 +88,22 @@
     background-color:#DEDEDE;
   }
 
-  .dot {
+  .petCafeDot {
     height: 30px;
     width: 30px;
-    border: 2px solid black;
-    background-color: #FFFFFF;
+    border: 2px solid #82EEFD;
+    background-color: #52B2BF;
     box-shadow: 1px 1px 14px 9px rgba(0,0,0,0.65);
     border-radius: 50%;
     text-align: center;
-    margin-top: 10px;
-    margin-left: 10px;
+  }
+
+  .dogParkDot {
+    height: 30px;
+    width: 30px;
+    border: 2px solid #D70FD0;
+    background-color: #F168D0;
+    box-shadow: 1px 1px 14px 9px rgba(0,0,0,0.65);
+    border-radius: 50%;
+    text-align: center;
   }
