--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 */
 
 #searchResultsList {
-    height: 300px;
+    height: 80%;
     overflow-y:scroll;
     outline: thick ridge #ED33B9;
     list-style-type: none;
@@ -37,7 +37,8 @@
 
 /* search results list elements styling */
 #searchResultsList li{
-    margin: 5px;
+    margin: 10px;
+    padding: 10px;
 }
 
 /* nth child is amazing! can style every odd/even child of all LI elements, can even apply numbers. */ 
@@ -86,6 +87,7 @@
 
   #offCanvasHeader{
     background-color:#DEDEDE;
+    border-bottom: 4px solid black;
   }
 
   .petCafeDot {
@@ -126,4 +128,8 @@
     box-shadow: 1px 1px 14px 9px rgba(0,0,0,0.65);
     border-radius: 50%;
     text-align: center;
+  }
+
+  .buttons{
+    margin: 3px;
   }
