map updates form styling

--- a/style.css
+++ b/style.css
@@ -191,8 +191,9 @@
   padding: 10px;
 }
 
+/* further styling for read only form to make it appear nicer, lacks a border and padding otherwise... */
 input[readonly]{
-  background-color: snow;
+  background-color: whitesmoke;
   border: 1px solid black;
   padding: 5px;
 }
